// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`React Test should call query method 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Say Hello
  </button>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`React Test should call query method 2`] = `
<div>
  <button
    onClick={[Function]}
  >
    Say Hello
  </button>
  <span>
    Hello, Query Call!
  </span>
</div>
`;

exports[`React Test should call update method 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Say Hello
  </button>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`React Test should call update method 2`] = `
<div>
  <button
    onClick={[Function]}
  >
    Say Hello
  </button>
  <span>
    Hello, Update Call!
  </span>
</div>
`;

exports[`React Test should initialize 1`] = `
<div>
  <span>
    Not initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
</div>
`;

exports[`React Test should initialize 2`] = `
<div>
  <span>
    Initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
</div>
`;

exports[`React Test should query 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Say Hello
  </button>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`React Test should query 2`] = `
<div>
  <button
    onClick={[Function]}
  >
    Say Hello
  </button>
  <span>
    Ready To call
  </span>
</div>
`;
